[MODINVOICE-617]. Incorrect encumbrances on orders with approved and cancelled invoices