@@ -38,18 +38,18 @@ public class BatchEncumbranceService extends AbstractBatchTransactionService {
   }
 
   private void updateBudgetForEncumbranceCreation(Budget budget, List<Transaction> encumbrances) {
-    CurrencyUnit currency = Monetary.getCurrency(encumbrances.get(0).getCurrency());
+    CurrencyUnit currency = Monetary.getCurrency(encumbrances.getFirst().getCurrency());
     encumbrances.forEach(encumbrance -> {
       double newEncumbered = sumMoney(budget.getEncumbered(), encumbrance.getAmount(), currency);
       budget.setEncumbered(newEncumbered);
     });
     calculateBudgetSummaryFields(budget);
-    updateBudgetMetadata(budget, encumbrances.get(0));
+    updateBudgetMetadata(budget, encumbrances.getFirst());
   }
 
   private void updateBudgetForEncumbranceUpdate(Budget budget, List<Transaction> encumbrances,
                                                 Map<String, Transaction> existingTransactions) {
-    CurrencyUnit currency = Monetary.getCurrency(encumbrances.get(0).getCurrency());
+    CurrencyUnit currency = Monetary.getCurrency(encumbrances.getFirst().getCurrency());
     encumbrances.forEach(encumbrance -> {
       Transaction existingEncumbrance = existingTransactions.get(encumbrance.getId());
       if (isNotFromReleasedExceptToUnreleased(encumbrance, existingEncumbrance)) {
@@ -57,7 +57,7 @@ public class BatchEncumbranceService extends AbstractBatchTransactionService {
       }
     });
     calculateBudgetSummaryFields(budget);
-    updateBudgetMetadata(budget, encumbrances.get(0));
+    updateBudgetMetadata(budget, encumbrances.getFirst());
   }
 
   private void updateBudget(Budget budget, CurrencyUnit currency, Transaction encumbrance, Transaction existingEncumbrance) {
@@ -74,14 +74,11 @@ public class BatchEncumbranceService extends AbstractBatchTransactionService {
       double awaitingPayment = existingEncumbrance.getEncumbrance().getAmountAwaitingPayment();
       double expended = existingEncumbrance.getEncumbrance().getAmountExpended();
       double credited = encumbrance.getEncumbrance().getAmountCredited();
-
       double newAmount = subtractMoney(initialAmountEncumbered, awaitingPayment, currency);
       newAmount = subtractMoney(newAmount, expended, currency);
       newAmount = sumMoney(newAmount, credited, currency);
-
       // prevent the new encumbrance from exceeding the initial encumbered amount or from going negative
-      newAmount = restrictNewAmountOnUnrelease(Encumbrance.Status.PENDING, encumbrance, newAmount, 0d);
-
+      newAmount = capNewAmountOnUnrelease(Encumbrance.Status.PENDING, encumbrance, newAmount, 0d);
       encumbrance.setAmount(newAmount);
       newEncumbered = sumMoney(currency, newEncumbered, newAmount);
     } else if (isTransitionFromReleasedToUnreleased(encumbrance, existingEncumbrance)) {
@@ -89,18 +86,16 @@ public class BatchEncumbranceService extends AbstractBatchTransactionService {
       double awaitingPayment = encumbrance.getEncumbrance().getAmountAwaitingPayment();
       double expended = encumbrance.getEncumbrance().getAmountExpended();
       double credited = encumbrance.getEncumbrance().getAmountCredited();
-
       // prevent the new encumbrance from exceeding the initial encumbered amount or from going below initial encumbered amount
       double newAmount;
       if (isNonZeroEncumbrance(encumbrance)) {
         newAmount = subtractMoney(initialAmountEncumbered, awaitingPayment, currency);
         newAmount = subtractMoney(newAmount, expended, currency);
         newAmount = sumMoney(newAmount, credited, currency);
-        newAmount = restrictNewAmountOnUnrelease(Encumbrance.Status.RELEASED, encumbrance, newAmount, encumbrance.getEncumbrance().getInitialAmountEncumbered());
+        newAmount = capNewAmountOnUnrelease(Encumbrance.Status.RELEASED, encumbrance, newAmount, encumbrance.getEncumbrance().getInitialAmountEncumbered());
       } else {
         newAmount = encumbrance.getEncumbrance().getInitialAmountEncumbered();
       }
-
       encumbrance.setAmount(newAmount);
       newEncumbered = sumMoney(newEncumbered, newAmount, currency);
     } else {
@@ -111,7 +106,8 @@ public class BatchEncumbranceService extends AbstractBatchTransactionService {
       } else {
         newAmount = Math.min(encumbrance.getAmount(), existingEncumbrance.getEncumbrance().getInitialAmountEncumbered());
       }
-
+      log.info("updateBudget::else Encumbrance initialAmount={} oldAmount={} newAmount={}",
+        encumbrance.getEncumbrance().getInitialAmountEncumbered(), encumbrance.getAmount(), newAmount);
       encumbrance.setAmount(newAmount);
       newEncumbered = sumMoney(newEncumbered, newAmount, currency);
       newEncumbered = subtractMoney(newEncumbered, existingEncumbrance.getAmount(), currency);
@@ -124,14 +120,15 @@ public class BatchEncumbranceService extends AbstractBatchTransactionService {
       && encumbrance.getAmount() <= encumbrance.getEncumbrance().getInitialAmountEncumbered();
   }
 
-  private static double restrictNewAmountOnUnrelease(Encumbrance.Status fromStatus, Transaction encumbrance, double newAmount, double cappedAmount) {
-    if (newAmount > encumbrance.getEncumbrance().getInitialAmountEncumbered()) {
-      log.warn("restrictNewAmountOnUnrelease:: Transition from {} to UNRELEASED, new amount is exceeding initial encumbered: {}, capped amount: {}",
-        fromStatus.name(), newAmount, encumbrance.getEncumbrance().getInitialAmountEncumbered());
-      newAmount = encumbrance.getEncumbrance().getInitialAmountEncumbered();
+  private static double capNewAmountOnUnrelease(Encumbrance.Status fromStatus, Transaction encumbrance, double newAmount, double cappedAmount) {
+    double initialAmount = encumbrance.getEncumbrance().getInitialAmountEncumbered();
+    if (newAmount > initialAmount) {
+      log.warn("capNewAmountOnUnrelease:: Transition from {} to UNRELEASED with newAmount={} " +
+          "exceeding initialAmount and will be capped at initialAmount={}", fromStatus.name(), newAmount, initialAmount);
+      newAmount = initialAmount;
     } else if (newAmount < 0) {
-      log.warn("restrictNewAmountOnUnrelease:: Transition from {} to UNRELEASED, new amount going below 0: {}, capped amount: {}",
-        fromStatus.name(), newAmount, cappedAmount);
+      log.warn("capNewAmountOnUnrelease:: Transition from {} to UNRELEASED with newAmount={} " +
+          "going below 0 and will be capped at cappedAmount={}",fromStatus.name(), newAmount, cappedAmount);
       newAmount = cappedAmount;
     }
     return newAmount;
